* Thu Sep 8 2011 Thunor <thunorsif@hotmail.com>
- Fixed a bug in _variables_export that was making the list widget hang.

* Wed Sep 7 2011 Thunor <thunorsif@hotmail.com>
- Fixed a bug in fill_clist_by_items whereby the item string was being
  corrupted by the linecutter function and wouldn't refresh. Item
  directive memory requires duplicating first prior to being chopped-up.
- Added examples/table/table_advanced.

* Tue Sep 6 2011 Thunor <thunorsif@hotmail.com>
- Added examples/edit/edit_advanced.

* Mon Sep 5 2011 Thunor <thunorsif@hotmail.com>
- Tweaked and shrunk the recently added checkbox_advanced example.
- Added examples/radiobutton/radiobutton_advanced.

* Sun Sep 4 2011 Thunor <thunorsif@hotmail.com>
- Updated Makefile.am for the new examples.

* Sat Sep 3 2011 Thunor <thunorsif@hotmail.com>
- Created new menu, menubar and menuitemseparator examples so that now
  all of the menu related examples are unique.

* Fri Sep 2 2011 Thunor <thunorsif@hotmail.com>
- Added examples/button/COPYING-elementary-icons.
- Added examples/button/button_image_position.
- Added examples/button/button_image_toggle.
- Added examples/button/no.svg.
- Added examples/button/yes.svg.
- Added examples/comboboxentry/comboboxentry_advanced.
- Added examples/comboboxtext/comboboxtext_advanced.
- Added examples/entry/entry_advanced.
- Added examples/hbox/hbox_scrollable.
- Added examples/hscale/hscale_advanced.
- Added examples/hseparator/hseparator_advanced.
- Added examples/menu/menu_advanced.
- Added examples/menubar/menubar_advanced.
- Added examples/menuitem/menuitem_advanced.
- Added examples/miscellaneous/fileselect_advanced.
- Renamed examples/miscellaneous/fileselect to fileselect_deprecated.
- Added examples/miscellaneous/icon_names.txt.
- Added examples/miscellaneous/stock_icon_test.
- Added examples/miscellaneous/theme_icon_support.
- Added examples/notebook/notebook_advanced.
- Added examples/spinbutton/spinbutton_advanced.
- Added examples/statusbar/statusbar_advanced.